# fons

./: .clang-format  .gitignore  CMakeLists.txt  app_cmd_manager.cpp  app_cmd_manager.hpp  app_icon.rc  app_main.cpp  app_main.hpp  app_settings.cpp  app_settings.hpp  license.md  readme.md  settings_observer.hpp  sonar-project.properties  vcpkg.json
.github/workflows/: main.yml
cmake/: FindSphinx.cmake
common/: cmd_complete_event.hpp  cmd_event.cpp  cmd_event.hpp  cmd_instance.hpp  cmd_observer.hpp  command.cpp  command.hpp  optional_binary.hpp  optional_json.hpp  optional_nvp.hpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
events/: cmd_complete_event.hpp  cmd_event.hpp  git_found_remote_event.hpp
git/: commit.hpp  config_entry.hpp  git_mediator.cpp  git_mediator.hpp  git_observer.hpp  gitlib_manager.hpp  unique_libgit_ptr.hpp
git/commands/: find_branches.cpp  find_branches.hpp  find_pull_requests.cpp  find_pull_requests.hpp  find_remotes.cpp  find_remotes.hpp  find_repos.cpp  find_repos.hpp  get_config.cpp  get_config.hpp  head_to_workdir.cpp  head_to_workdir.hpp  revwalk.cpp  revwalk.hpp  status.cpp  status.hpp
gui/: branch_selector.cpp  branch_selector.hpp  ebt_window_control_button.cpp  ebt_window_control_button.hpp  everything_but_the_title_bar.cpp  everything_but_the_title_bar.hpp  fons_wx.hpp  frame_home.cpp  frame_home.hpp  license_notices.txt  repo_selector.cpp  repo_selector.hpp  search_completer.cpp  search_completer.hpp  sidebar_button.cpp  sidebar_button.hpp
gui/contexts/: context_branches.cpp  context_branches.hpp  context_changes.cpp  context_changes.hpp  context_commit.cpp  context_commit.hpp  context_info.cpp  context_info.hpp  context_merge.cpp  context_merge.hpp  context_remote.cpp  context_remote.hpp  context_repo.cpp  context_repo.hpp  context_settings.cpp  context_settings.hpp
ut/: CMakeLists.txt  app_cmd_manager_tests.cpp
ut/mocks/: app_main.hpp  app_settings.hpp  mock_cmd.hpp
